# semantic-segmentation

./: .gitignore  CLAUDE.md  README.md  aerial_imagery.ipynb  config.py  dataset.py  docker-compose.yml  download_data.py  environment_pytorch.yml  etl.py  etl_bgt.py  evaluation.py  pilot_verharding.yml  pipeline.ipynb  pyproject.toml  satellite_imagery.ipynb  satellite_imagery_config.json  satellite_imagery_machine_learning.ipynb  utils.py  visualisation.py
docker/initdb/: 01_init.sql
src/: config.py  dataset.py  download_data.py  etl.py  etl_bgt.py  evaluation.py  modelling.py  spatial_scope.py  visualisation.py
