[project]
name = "object-segmentation"
version = "0.1.0"
description = "Semantic segmentation of urban surface hardening (pavement vs. greenery) in Utrecht using U-Net + ResNet50"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # geo / ETL
    "geopandas>=0.13",
    "shapely>=2.0",
    "pyproj>=3.4",
    "rasterio>=1.3",
    "rioxarray>=0.13",
    "geocube>=0.4",
    "fiona>=1.9",
    "mercantile>=1.2",
    "OWSLib>=0.28",
    "contextily>=1.3",
    # data / compute
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "xarray>=2023.1",
    "h5py>=3.8",
    "scikit-image>=0.20",
    "joblib>=1.2",
    "pyarrow>=12.0",
    # ML
    "torch>=2.0",
    "torchvision>=0.15",
    "torchaudio>=2.0",
    "segmentation-models-pytorch>=0.3",
    "torchmetrics>=0.11",
    "timm>=0.9",
    "albumentations>=1.3",
    "pillow>=9.4",
    # DB
    "psycopg[binary]>=3.1",
    "sqlalchemy>=2.0",
    # viz
    "matplotlib>=3.7",
    "plotly>=5.14",
    # util
    "tqdm>=4.65",
    "requests>=2.28",
    "wget>=3.2",
    "ipykernel>=6.20",
]

# PyTorch CUDA wheels — adjust the index name/URL if your driver supports a newer CUDA version.
# Verify with: nvidia-smi (look for "CUDA Version" in the top-right corner)
# cu118 requires driver >= 450.80.02 (Linux) / 452.39 (Windows)
# cu121 requires driver >= 525.60.13 (Linux) / 527.41 (Windows)
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu121" }]
torchvision = [{ index = "pytorch-cu121" }]
torchaudio = [{ index = "pytorch-cu121" }]
